# VulkanLearning

./: =  CMakeLists.txt  Pipeline.cpp  Pipeline.h  Vertex.h  VulkanContext.cpp  VulkanContext.h  main.cpp
.cache/clangd/index/: Application.cpp.2B4073F062B250D9.idx  Application.hpp.3B52245690BAA568.idx  Camera.cpp.7272325F4475BC3C.idx  Camera.cpp.CECA6224B9AAC211.idx  Camera.hpp.B51ECE43731DCF5B.idx  Chunk.cpp.CCFB2B35193AFFEB.idx  Chunk.hpp.7E1F267693C2A981.idx  ChunkManager.cpp.CF509BCC9D987D5D.idx  ChunkManager.hpp.63FADC4307019A72.idx  ChunkRenderSystem.cpp.B4CC18D0B9D96DF2.idx  ChunkRenderSystem.hpp.9042EFA07516C4FD.idx  CommandBufferRecorder.hpp.9B36A074CEB20FAB.idx  CommandManager.cpp.2CDDA6F6FA1DCFB5.idx  CommandManager.hpp.B4A493FD726E8DCB.idx  DebugRenderer.cpp.9C7FEC8B0A74B0FE.idx  DepthResources.cpp.1C9DBDFC155974F0.idx  DepthResources.hpp.4D70EA2ACE44FE2E.idx  DescriptorManager.cpp.D043F4B7C24EEFFE.idx  DescriptorManager.hpp.8E5C1A711B074EA8.idx  ECSManager.cpp.E7B58CC510EDC2E2.idx  Entity.cpp.AF2490D2BE3B3596.idx  FastNoiseLite.h.F892D8ACEDBD4680.idx  FrameSync.cpp.6AEB59B8B5A7181E.idx  FrameSync.hpp.CA17FE6AD0262BE8.idx  FramebufferManager.cpp.07D68BFD3A3CC13E.idx  FramebufferManager.hpp.6792B15DD22C2EBA.idx  FrustumCulling.cpp.81AE206541E38AA9.idx  FrustumCulling.hpp.2F2BEA28874F62D6.idx  InputManager.cpp.FA71632B9F7EAF0E.idx  InputManager.hpp.3F11AB5FC3F79A77.idx  Material.cpp.6F20D2D20DEBEA33.idx  Math.cpp.56388AA69FB681FA.idx  Mesh.cpp.B4A7E5F255BAE592.idx  Mesh.hpp.D081083A0B31E849.idx  Model.cpp.FB5865C07E4C3B7B.idx  Octree.cpp.7E5D2C892023DE1E.idx  Pipeline.cpp.0B79CC1D1F6FF40F.idx  Pipeline.hpp.C1BACABFB1D97AF6.idx  RenderCommandManager.cpp.F9930A1C9F09F696.idx  RenderCommandManager.hpp.CC36C8190E664DDA.idx  (+60 more)
assets/models/Plant/: Plant.mtl
assets/shaders/: frag.glsl  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  triangle_test.vert  vert.glsl  wireframe.frag
include/engine/app/: Application.hpp  Renderer.hpp  Window.hpp
include/engine/configs/: DeviceConfig.hpp  PipelineConfig.hpp  ValidationConfig.hpp  WindowConfig.hpp
include/engine/core/: Application.hpp  Context.hpp  DebugUtilsMessenger.hpp  Device.hpp  Instance.hpp  PhysicalDevice.hpp  Queue.hpp  Surface.hpp
include/engine/descriptors/: DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp
include/engine/ecs/: Components.hpp
include/engine/math/: FrustumCulling.hpp
include/engine/memory/: Buffer.hpp  DeviceMemory.hpp
include/engine/pipeline/: GraphicsPipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  ShaderModule.hpp
include/engine/platform/: CommandBufferRecorder.hpp  CommandManager.hpp  DepthResources.hpp  DescriptorManager.hpp  FrameSync.hpp  FramebufferManager.hpp  InputManager.hpp  RenderCommandManager.hpp  RenderGraph.hpp  RenderPassManager.hpp  RenderResources.hpp  RendererContext.hpp  Swapchain.hpp  UniformManager.hpp  VulkanContext.hpp  VulkanDevice.hpp  WindowManager.hpp
include/engine/render/: Camera.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  Renderer.hpp  Vertex.hpp
include/engine/rendering/: CommandBuffer.hpp  CommandPool.hpp  Fence.hpp  Semaphore.hpp
include/engine/resources/: Model.hpp  Texture.hpp
include/engine/scene/: Camera.hpp
include/engine/swapchain/: Depthbuffer.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Swapchain.hpp
include/engine/ui/: ImGuiLayer.hpp
include/engine/utils/: Hash.hpp  ThreadPool.hpp  UniformBufferObject.hpp  Vertex.hpp  VulkanHelpers.hpp
include/engine/voxel/: Chunk.hpp  OctreeNode.hpp  TerrainGenerator.hpp  Voxel.hpp  VoxelChunk.hpp  VoxelMesher.hpp  VoxelResources.hpp  VoxelVolume.hpp
include/engine/world/: Chunk.hpp  ChunkManager.hpp  ChunkRenderSystem.hpp  Config.hpp  TerrainGenerator.hpp
shaders/: triangle.frag  triangle.vert  triangle.vert.spv
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Renderer.cpp  Window.cpp
src/core/: Application.cpp  Context.cpp  DebugUtilsMessenger.cpp  Device.cpp  Instance.cpp  PhysicalDevice.cpp  Queue.cpp  Surface.cpp
src/descriptors/: DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp
src/math/: FrustumCulling.cpp
src/memory/: Buffer.cpp  DeviceMemory.cpp
src/pipeline/: GraphicsPipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  ShaderModule.cpp
src/platform/: CommandManager.cpp  DepthResources.cpp  DescriptorManager.cpp  FrameSync.cpp  FramebufferManager.cpp  InputManager.cpp  RenderCommandManager.cpp  RenderGraph.cpp  RenderPassManager.cpp  RenderResources.cpp  RendererContext.cpp  Swapchain.cpp  UniformManager.cpp  VulkanContext.cpp  VulkanDevice.cpp  WindowManager.cpp
src/render/: Camera.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  Renderer.cpp
src/rendering/: CommandBuffer.cpp  CommandPool.cpp  Fence.cpp  Semaphore.cpp
src/resources/: Model.cpp  Texture.cpp
src/scene/: Camera.cpp
src/swapchain/: Depthbuffer.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  Swapchain.cpp
src/ui/: ImGuiLayer.cpp
src/utils/: ThreadPool.cpp  Vertex.cpp  VulkanHelpers.cpp
src/voxel/: Chunk.cpp  TerrainGenerator.cpp  VoxelChunk.cpp  VoxelMesher.cpp  VoxelResources.cpp  VoxelVolume.cpp
src/world/: ChunkManager.cpp  ChunkRenderSystem.cpp  TerrainGenerator.cpp
tests/: CMakeLists.txt
